# MyPythonPackageTemplate

./: .env  Dockerfile  MANIFEST.in  README.md  bumpversion.sh  conda_my_package.sh  docker-compose.yml  pyproject.toml  requirements.deploy.txt.sh  requirements.devel.txt  requirements.txt
src/my_package/: __init__.py  main.py
src/my_package/tests/: test.py
